This commit update the talk

--- a/custom.scss
+++ b/custom.scss
@@ -28,6 +28,7 @@ $yellow:  #efb73e !default;
 $green:   #38b44a !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
+$pine:    #234F1E !default;
 
 $primary:       $purple !default;
 $secondary:     $cyan !default;
@@ -42,7 +43,7 @@ $min-contrast-ratio:   1.8 !default;
 
 // Body
 
-$body-color:                $cyan !default;
+$body-color:                $pine !default;
 
 // Fonts
 
